tests/should_fail/syntax_if_let_var_exists.nv
module main

// SHOULD FAIL: if-let binding variable that already exists
let opt: Option(Int) = Some(5)
let inner = 0
if let inner = opt {
    println(inner)
}
